--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
-arguments=--init-script /home/huevo/.cache/jdtls/config/org.eclipse.osgi/55/0/.cp/gradle/init/init.gradle
+arguments=--init-script /home/huevo/.cache/jdtls/config/org.eclipse.osgi/58/0/.cp/gradle/init/init.gradle
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/usr/lib/jvm/java-17-openjdk-17.0.12.0.7-2.fc40.x86_64
+java.home=/home/linuxbrew/.linuxbrew/Cellar/openjdk/23.0.1/libexec
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
